--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "how-many-artboards",
+  "name": "How Many Artboards?",
   "description": "",
   "version": "2.0.0",
   "engines": {
     "sketch": ">=49.0"
   },
   "skpm": {
-    "name": "how-many-artboards",
+    "name": "How Many Artboards?",
     "manifest": "src/manifest.json",
-    "main": "how-many-artboards.sketchplugin",
+    "main": "How Many Artboards?.sketchplugin",
     "assets": [
       "assets/**/*"
     ],
