--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "How Many Artboards?",
-  "description": "",
+  "description": "A Sketch plugin for counting the number of artboards in your file or on your page.",
   "version": "2.0.1",
   "engines": {
     "sketch": ">=49.0"
